--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 'Daily Job'
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # UTC时间每4小时执行一次
+    - cron: '0 23,11 * * *'
   workflow_dispatch:
 
 jobs:
